Fixing bug on mobile device: Login form height

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -335,3 +335,8 @@ button
 
   .contenido-derecha
     max-height: 60vh
+
+
+@media screen and (max-width: 375px)
+ .contenido-derecha
+    max-height: 75vh
